tests/snapshots/examples_fixtures/type_classes__FoldableRowPolyExample__App__Reports.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/FoldableRowPolyExample/App/Reports.flx
== compile ==
failed (module)
== diagnostics ==
error[E024]: Module Path Mismatch

Module name `FoldableRowPolyExample.App.Reports` doesn't match file path `examples/type_classes/FoldableRowPolyExample/App/Reports.flx`.

  examples/type_classes/FoldableRowPolyExample/App/Reports.flx:4:1
  |
4 | module FoldableRowPolyExample.App.Reports {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
